# quad-sieve

./: .gitignore  Makefile  README.md  Z2alg.py  compile.sh  functions.cpp  lin_alg.cpp  numthy.py  poly.cpp  poly.h  qsieve.py
include/: lin_alg.h  num_theory.h  sieve.h  util.h
src/: lin_alg.cpp  main.cpp  num_theory.cpp  sieve.cpp  test.cpp  util.cpp
test/: CMakeLists.txt  clean.sh  run_test.sh  sieve_tests.cpp  test  test.cpp  verbose_test.cpp
